# rng-bench

./: CMakeLists.txt  README.md
include/: rng_csimd_dynamic.h  rng_csmid_dynamic.h  rng_csv.h  rng_pcg32.h  rng_platform.h  rng_splitmix64.h  rng_stats.h  rng_std_wrappers.h  rng_xoroshiro128pp.h  rng_xoroshiro256ss.h
src/: main.cpp
